gatewayapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: reactapp-gateway
  namespace: dev
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
---
        
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: reactapp-httproute
  namespace: dev
spec:
  parentRefs:
  - name: reactapp-gateway
    sectionName: http
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /fe
    backendRefs:
    - name: reactapp
      port: 80
      kind: Service
      namespace: dev
  - matches:
    - path:
        type: PathPrefix
        value: /assets
    backendRefs:
    - name: reactapp
      port: 80
      kind: Service
      namespace: dev
  - matches:
    - path:
        type: PathPrefix
        value: /be
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /  # Removes /be prefix
    backendRefs:
    - name: nodeapp-service
      port: 80
      kind: Service
      namespace: database
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: dev
  labels:
    app: reactapp
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: reactapp
